Fix logo overflowing in small viewports

--- a/src/components/Logos/Logos.module.scss
+++ b/src/components/Logos/Logos.module.scss
@@ -1,4 +1,5 @@
 .logos {
-       margin-top: 2.5rem;
-       height: 3.75rem;
+        margin-top: 2.5rem;
+        height: 3.75rem;
+        max-width: calc(100vw - 1rem);
     }
